--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2",
+    "vue": "^2.6.14",
+    "wavesurfer": "^1.3.4",
+    "wavesurfer-multitrack": "^0.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -31,7 +37,8 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@babel/eslint-parser",
+      "requireConfigFile": false
     },
     "rules": {}
   },
